fix: profile meta overflow
Close #343

--- a/src/main/scss/_profile.scss
+++ b/src/main/scss/_profile.scss
@@ -28,6 +28,7 @@
     align-items: center;
     display: inline-flex;
     margin-right: 0.5rem;
+    word-break: break-all;
   }
 
   a {
